fixed spacing and duplicates

--- a/p18 project2/style.css
+++ b/p18 project2/style.css
@@ -27,7 +27,7 @@
 .searchBox {
   width: 100%;
   border: none;
-  height: 50px;
+  height: 40px;
   border-radius: 5px;
   padding: 0px 40px 0px 10px;
   font-size: 18px;
@@ -86,10 +86,6 @@
 .show .results ul li {
   opacity: 1;
   display: block;
-}
-
-.show .results {
-  padding: 10px;
 }
 
 .results ul li:hover {
